Fix errors in base.html, and db.py. Add bootstrap

--- a/templates/admin.html
+++ b/templates/admin.html
@@ -1,5 +1,3 @@
-{% extends base.html %}
+{% extends "base.html" %}
 
-<p>
-  Base this off of the UI for self-control
-</p>
+{% block title %} Home {% endblock %}
