--- a/templates/root.html
+++ b/templates/root.html
@@ -1,17 +1,14 @@
 {% extends "base.html" %}
 
-{% block header %}
+{% block title %} Login {% endblock %}
+
+{% block body %}
   <h4>Students:</h4>
   <h5>Login as <a href="/studentlogin">Student</a></h5>
-  <h5>Creaate <a href="/studentAccount">Student Account</a></h5>
+  <h5>Create <a href="/studentAccount">Student Account</a></h5>
   <br>
   <br>
   <h4>Teachers and Admin:</h4>
   <h5>Login as <a href="/adminlogin">Admin</a></h5>
-  <h5>Creaate <a href="/adminaccount">Admin Account</a></h5>
-{% endblock %}
-
-
-{% block body %}
-
+  <h5>Create <a href="/adminaccount">Admin Account</a></h5>
 {% endblock %}
