--- a/templates/studentinfo.html
+++ b/templates/studentinfo.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block header %}
-  <h2>Welcome, {{username}}!</h2>
+  <h2>Welcome, {{user}}!</h2>
   <h3>Please enter your information to finish creating your account.</h3>
 {% endblock %}
 
