Fix html templates

--- a/templates/register.html
+++ b/templates/register.html
@@ -1,8 +1,6 @@
 {% extends "base.html" %}
 
-{% block header %}
-  {%block title%}  {%endblock%}
-{% endblock %}
+{%block title%} Register {%endblock%}
 
 {% block body %}
 
