--- a/templates/admin.html
+++ b/templates/admin.html
@@ -1,3 +1,9 @@
 {% extends "base.html" %}
 
 {% block title %} Home {% endblock %}
+
+{% block body %}
+<table>
+  <!-- this should show the student opportunity bulletin -->
+</table>
+{% endblock %}
