fixed routes and homepage text

--- a/templates/root.html
+++ b/templates/root.html
@@ -3,12 +3,11 @@
 {% block title %} Login {% endblock %}
 
 {% block body %}
-  <h4>Students:</h4>
-  <h5>Login as <a href="/studentlogin">Student</a></h5>
-  <h5>Create <a href="/studentAccount">Student Account</a></h5>
   <br>
+  <h4>Already have an account?</h4>
+  <h5><a href="/login">Login</a>
   <br>
-  <h4>Teachers and Admin:</h4>
-  <h5>Login as <a href="/adminlogin">Admin</a></h5>
-  <h5>Create <a href="/adminaccount">Admin Account</a></h5>
+  <h4>Make a new account:</h4>
+  <h5>I am a <a href="/studentAccount">Student</a>.</h5>
+  <h5>I am an <a href="/adminaccount">Admin</a>.</h5>
 {% endblock %}
