fixed grade dropdown in form

--- a/templates/studentinfo.html
+++ b/templates/studentinfo.html
@@ -16,7 +16,8 @@
     <label for="email">Email</label>
     <input type="text" name="email" required>
     <br>
-    <select id="grade" required>Grade
+    <label for="grade">Grade</label>
+    <select name="grade" required>Grade
       <option value="9">9</option>
       <option value="10">10</option>
       <option value="11">11</option>
