--- a/templates/stu_home.html
+++ b/templates/stu_home.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block header %}
-  {% for message in get_flashed_messages %}
+  {% for message in get_flashed_messages() %}
     {{message}}
   {% endfor %}
 {% endblock %}
