fixed link to admin register on root

--- a/templates/root.html
+++ b/templates/root.html
@@ -9,5 +9,5 @@
   <br>
   <h4>Make a new account:</h4>
   <h5>I am a <a href="/studentAccount">Student</a>.</h5>
-  <h5>I am an <a href="/adminaccount">Admin</a>.</h5>
+  <h5>I am an <a href="/adminAccount">Admin</a>.</h5>
 {% endblock %}
