--- a/templates/allOps.html
+++ b/templates/allOps.html
@@ -9,6 +9,14 @@
 
 {% block body %}
 <div align="center">
+  <form action="/action_page.php">
+    <select name="cars">
+      <option value="duedate">Due Date</option>
+      <option value="posted">Most Recent</option>
+    </select>
+  <input type="submit">
+</form>
+<br>
   <h1> Opportunities </h1>
   <ul>
       {% for item in collection %}
