added pages for all opportunities and my opportunities

--- a/templates/stu_home.html
+++ b/templates/stu_home.html
@@ -8,7 +8,7 @@
 
 
 {% block body %}
-  <h1>View my opportunities</h1>
-  <h1>See all opportunities</h1>
+  <h1 href= "/myOps">View my opportunities</h1>
+  <h1 href= "/allOps">See all opportunities</h1>
   <h1>View account info</h1>
 {% endblock %}
