added email field for admin register

--- a/templates/register.html
+++ b/templates/register.html
@@ -35,6 +35,9 @@
   {% if admin %}
   <label for="adminCode">Admin Code</label>
   <input type="text" name="adminCode" required>
+  <br>
+  <label for="email">Email</label>
+  <input type="text" name="email" required>
   {% endif %}
   <input type="submit" name="register-button" value="Sign Up">
   <p>Already have an account? <a href="/login">Log In</a></p>
