--- a/templates/add_op.html
+++ b/templates/add_op.html
@@ -19,7 +19,7 @@
     <option value="events">General</option>
     <option value="academic">Academic</option>
     <option value="business">Business & Jobs</option>
-    <option value="community service">Community Service</option>
+    <option value="community_service">Community Service</option>
     <option value="leadership">Leadership, Government, Law, Advocacy, International</option>
     <option value="museums">Museums and Art</option>
     <option value="nature">Parks, Zoos, Nature</option>
