Added Admin Calendar

--- a/templates/stu_home.html
+++ b/templates/stu_home.html
@@ -11,4 +11,8 @@
   <h1 href= "/myOps">View my opportunities</h1>
   <h1 href= "/allOps">See all opportunities</h1>
   <h1>View account info</h1>
+  
+  <form action = "/adminCalendar">
+	<input type = "submit" name = "adminCalendar" value = "Admin Calendar">
+  </form>
 {% endblock %}
