Can now add events to calendar

--- a/templates/stu_home.html
+++ b/templates/stu_home.html
@@ -13,6 +13,10 @@
   <h1>View account info</h1>
   
   <form action = "/adminCalendar">
-	<input type = "submit" name = "adminCalendar" value = "Admin Calendar">
+	<input type = "submit" value = "Admin Calendar">
+  </form>
+  
+  <form action = "/addEvent">
+	<input type = "submit" value = "Add Event">
   </form>
 {% endblock %}
