--- a/templates/adminCalendar.html
+++ b/templates/adminCalendar.html
@@ -1,7 +1,10 @@
 {% extends "base.html" %}
 
-{% block title %} Calendar Test {% endblock %}
+{% block title %} Admin Calendar {% endblock %}
 
 {% block body %}
     <iframe src="https://calendar.google.com/calendar/embed?src=zhengjas8924%40gmail.com&ctz=America%2FNew_York" style="border: 0" width="800" height="600" frameborder="0" scrolling="no"></iframe>
+	<form action = '/studentHome'>
+		<input type = 'submit' value = 'Return To Home Page'>
+	</form>
 {% endblock %}
