--- a/templates/register.html
+++ b/templates/register.html
@@ -17,7 +17,7 @@
   {% endif %}
 
   {% if admin %}
-    <h3>Create Student Account</h3>
+    <h3>Create Admin Account</h3>
     <br>
     <form action="/register" method="POST">
   {% endif %}
