Hopefully didn't break anything

--- a/templates/adm_home.html
+++ b/templates/adm_home.html
@@ -8,5 +8,9 @@
 {% endblock %}
 
 {% block body %}
+<table class="table">
+  <thead>
+    <tr>
+      <th scope="col">
   <a href="/addOp">Add new Opportunity!</a>
 {% endblock %}
