--- a/templates/allOps.html
+++ b/templates/allOps.html
@@ -18,13 +18,41 @@
 </form>
 <br>
   <h1> Opportunities </h1>
-  <ul>
-      {% for item in collection %}
-      <li>
-          <a href="{{ url_for('oppotunity', opid=item[0]) }}">{{ item[1] }}</a> <br> <br>
-      </li>
+  <table class="table">
+    <thead>
+      <tr>
+        <th scope="col">Opportunity Name</th>
+        <th scope="col">Grades</th>
+        <th scope="col">Tags / Interests</th>
+        <th scope="col">Description</th>
+      </tr>
+    </thead>
+    {% for item in op_list %}
+    <tbody>
+      <tr>
+        <th scope="row">{{item[1]}}</th>
+        <td>
+          {% if item[15] %}<span class="badge badge-primary">9</span>{% endif %}
+          {% if item[16] %}<span class="badge badge-primary">10</span>{% endif %}
+          {% if item[17] %}<span class="badge badge-primary">11</span>{% endif %}
+          {% if item[18] %}<span class="badge badge-primary">12</span>{% endif %}
+        </td>
+        <td>
+          {% if item[2] %}<span class="badge badge-primary">events</span>{% endif %}
+          {% if item[3] %}<span class="badge badge-primary">academic</span>{% endif %}
+          {% if item[4] %}<span class="badge badge-primary">business</span>{% endif %}
+          {% if item[5] %}<span class="badge badge-primary">community service</span>{% endif %}
+          {% if item[6] %}<span class="badge badge-primary">leadership</span>{% endif %}
+          {% if item[7] %}<span class="badge badge-primary">museums</span>{% endif %}
+          {% if item[8] %}<span class="badge badge-primary">nature</span>{% endif %}
+          {% if item[9] %}<span class="badge badge-primary">STEM</span>{% endif %}
+          {% if item[10] %}<span class="badge badge-primary">humanities</span>{% endif %}
+          {% if item[11] %}<span class="badge badge-primary">scholarship</span>{% endif %}
+        </td>
+        <td><div style="overflow-y: scrollable;">{{item[12]}}</div></td>
       {% endfor %}
-  </ul>
+    </tbody>
+  </table>
   <br>
 </div>
 {% endblock %}
