fixed stu_home buttons

--- a/templates/base.html
+++ b/templates/base.html
@@ -47,8 +47,9 @@
     {% block body %} {% endblock %}
   </body>
   <footer>
-    {% block footer %} {% endblock %}
+    {% block footer %}
     <p>&copy; Copyright 2019 Team HumanJello -- Sophie Nichol, Lauren Pehlivanian, Jason Zheng, Winston Peng</p>
+    {% endblock %}
   </footer>
 
 </html>
