added back button

--- a/templates/add_op.html
+++ b/templates/add_op.html
@@ -7,6 +7,8 @@
   <!-- this should show the student opportunity bulletin -->
 </table>
 
+<a href="/adminHome" class="btn btn-primary" role="button">Go Back</a>
+
 <!-- form to add new opportunity -->
 <h4>Add New Opportunity</h4>
 <form action="/addOpAuth" method="POST">
