--- a/templates/allOps.html
+++ b/templates/allOps.html
@@ -4,10 +4,13 @@
   {% for message in get_flashed_messages() %}
     {{message}}
   {% endfor %}
+
 {% endblock %}
 
-
 {% block body %}
+{% if admin %}<a href="/adminHome" class="btn btn-primary" role="button">Go Back</a>{% endif %}
+{% if not admin %}<a href="/studentHome" class="btn btn-primary" role="button">Go Back</a>{% endif %}
+<br>
 <div align="center">
   <form action="/action_page.php">
     <select name="cars">
@@ -28,6 +31,7 @@
         <th scope="col">Program Dates</th>
         <th scope="col">Due Date</th>
         <th scope="col">Date Posted</th>
+        {% if admin %}<th scope="col">Edit</th>{% endif %}
       </tr>
     </thead>
     {% for item in op_list %}
@@ -53,11 +57,12 @@
           {% if item[11] %}<span class="badge badge-primary">scholarship</span>{% endif %}
         </td>
         <td><div style="overflow-y: scrollable;">{{item[12]}}</div></td>
-        <td><span class="badge badge-pill badge-success">{{item[22]}}</span> - 
+        <td><span class="badge badge-pill badge-success">{{item[22]}}</span> -
             <span class="badge badge-pill badge-danger">{{item[23]}}</span>
         </td>
         <td><span class="badge badge-pill badge-info">{{item[20]}}</span></td>
         <td><span class="badge badge-pill badge-info">{{item[21]}}</span></td>
+        {% if admin %}<td><a href="/editOpp/{{item[0]}}" class="btn btn-danger" role="button">Edit</a></td>{% endif %}
       {% endfor %}
     </tbody>
   </table>
