--- a/templates/loggedin_base.html
+++ b/templates/loggedin_base.html
@@ -3,5 +3,5 @@
 
 
 {% block footer %}
-  <a href="/logout">Log out</a>
+  <a href="/logout" class="btn btn-primary" role="button">Log Out</a>
 {% endblock %}
