--- a/templates/root.html
+++ b/templates/root.html
@@ -1,11 +1,9 @@
 {% extends "base.html" %}
 
-{% block title %} Login {% endblock %}
-
 {% block body %}
   <br>
-  <h4>Already have an account?</h4>
-  <h5><a href="/login">Login</a>
+  <h2>Already have an account?</h2>
+  <h3><a href="/login">Login</a></h3>
   <br>
   <h4>Make a new account:</h4>
   <h5>I am a <a href="/studentAccount">Student</a>.</h5>
