--- a/templates/myOps.html
+++ b/templates/myOps.html
@@ -30,7 +30,7 @@
     {% for item in op_list %}
     <tbody>
       <tr>
-        <th scope="row">{{item[1]}}</th>
+        <th scope="row" href = "{{ url_for('view_op', opid=item[0]) }}">{{item[1]}} </th>
         <td>
           {% if item[2] %}<span class="badge badge-primary">events</span>{% endif %}
           {% if item[3] %}<span class="badge badge-primary">academic</span>{% endif %}
