--- a/templates/allOps.html
+++ b/templates/allOps.html
@@ -31,7 +31,10 @@
         <th scope="col">Program Dates</th>
         <th scope="col">Due Date</th>
         <th scope="col">Date Posted</th>
-        {% if admin %}<th scope="col">Edit</th>{% endif %}
+        {% if admin %}
+        <th scope="col">Edit</th>
+        <th scope="col">Delete</th>
+        {% endif %}
       </tr>
     </thead>
     {% for item in op_list %}
@@ -62,7 +65,10 @@
         </td>
         <td><span class="badge badge-pill badge-info">{{item[20]}}</span></td>
         <td><span class="badge badge-pill badge-info">{{item[21]}}</span></td>
-        {% if admin %}<td><a href="/editOpp/{{item[0]}}" class="btn btn-danger" role="button">Edit</a></td>{% endif %}
+        {% if admin %}
+        <td><a href="/editOpp/{{item[0]}}" class="btn btn-warning" role="button">Edit</a></td>
+        <td><a href="/delOpp/{{item[0]}}" class="btn btn-danger" role="button">Delete</a></td>
+        {% endif %}
       {% endfor %}
     </tbody>
   </table>
