--- a/templates/register.html
+++ b/templates/register.html
@@ -2,6 +2,7 @@
 
 {%block title%} Register {%endblock%}
 
+{% block navbar_logged_in %} {% endblock %}
 {% block body %}
 
   {% for message in get_flashed_messages() %}
