Fix footer, and try to fix new account page

--- a/templates/base.html
+++ b/templates/base.html
@@ -49,7 +49,11 @@
   </body>
   <footer>
     {% block footer %}
-    <p style = "position: absolute; bottom: 0;">&copy; Copyright 2019 Team HumanJello -- Sophie Nichol, Lauren Pehlivanian, Jason Zheng, Winston Peng</p>
+    <footer class="footer"> 
+        <div class="container">
+            Copyright 2019 Team HumanJello -- Sophie Nichol, Lauren Pehlivanian, Jason Zheng, Winston Peng
+        </div>
+    </footer>
     {% endblock %}
   </footer>
 
