fixed grades and grades code

--- a/templates/view_op.html
+++ b/templates/view_op.html
@@ -16,23 +16,23 @@
       <br>
       <p> Interests:</p>
       <td>
-        {% if item[2] %}<span class="badge badge-primary">events</span>{% endif %}
-        {% if item[3] %}<span class="badge badge-primary">academic</span>{% endif %}
-        {% if item[4] %}<span class="badge badge-primary">business</span>{% endif %}
-        {% if item[5] %}<span class="badge badge-primary">community service</span>{% endif %}
-        {% if item[6] %}<span class="badge badge-primary">leadership</span>{% endif %}
-        {% if item[7] %}<span class="badge badge-primary">museums</span>{% endif %}
-        {% if item[8] %}<span class="badge badge-primary">nature</span>{% endif %}
-        {% if item[9] %}<span class="badge badge-primary">STEM</span>{% endif %}
-        {% if item[10] %}<span class="badge badge-primary">humanities</span>{% endif %}
-        {% if item[11] %}<span class="badge badge-primary">scholarship</span>{% endif %}
+        {% if ints[0] %}<span class="badge badge-primary">events</span>{% endif %}
+        {% if ints[1] %}<span class="badge badge-primary">academic</span>{% endif %}
+        {% if ints[2] %}<span class="badge badge-primary">business</span>{% endif %}
+        {% if ints[3] %}<span class="badge badge-primary">community service</span>{% endif %}
+        {% if ints[4] %}<span class="badge badge-primary">leadership</span>{% endif %}
+        {% if ints[5] %}<span class="badge badge-primary">museums</span>{% endif %}
+        {% if ints[6] %}<span class="badge badge-primary">nature</span>{% endif %}
+        {% if ints[7] %}<span class="badge badge-primary">STEM</span>{% endif %}
+        {% if ints[8] %}<span class="badge badge-primary">humanities</span>{% endif %}
+        {% if ints[9] %}<span class="badge badge-primary">scholarship</span>{% endif %}
       </td>
       <p> Grades:  </p>
       <td>
-        {% if item[15] %}<span class="badge badge-primary">9</span>{% endif %}
-        {% if item[16] %}<span class="badge badge-primary">10</span>{% endif %}
-        {% if item[17] %}<span class="badge badge-primary">11</span>{% endif %}
-        {% if item[18] %}<span class="badge badge-primary">12</span>{% endif %}
+        {% if grades[0] %}<span class="badge badge-primary">9</span>{% endif %}
+        {% if grades[1] %}<span class="badge badge-primary">10</span>{% endif %}
+        {% if grades[2] %}<span class="badge badge-primary">11</span>{% endif %}
+        {% if grades[3] %}<span class="badge badge-primary">12</span>{% endif %}
       </td>
       <br>
       <italic> {{ description }} </italic>
