--- a/templates/register.html
+++ b/templates/register.html
@@ -2,7 +2,8 @@
 
 {%block title%} Register {%endblock%}
 
-{% block navbar_logged_in %} {% endblock %}
+{% block navbar_stu %} {% endblock %}
+{% block navbar_admin %} {% endblock %}
 {% block body %}
 
   {% for message in get_flashed_messages() %}
