--- a/templates/root.html
+++ b/templates/root.html
@@ -1,6 +1,7 @@
 {% extends "base.html" %}
 
-{% block navbar_logged_in %} {% endblock %}
+{% block navbar_stu %} {% endblock %}
+{% block navbar_admin %} {% endblock %}
 
 {% block body %}
   <br>
