--- a/templates/stu_home.html
+++ b/templates/stu_home.html
@@ -6,6 +6,8 @@
   {% endfor %}
 {% endblock %}
 
+{% block navbar_admin %} {% endblock %}
+{% block navbar_logout %} {% endblock %}
 
 {% block body %}
 	<h1> Student Opportunity Board </h1>
