--- a/templates/stu_info.html
+++ b/templates/stu_info.html
@@ -1,6 +1,9 @@
-{% extends "loggedin_base.html" %}
+{% extends "base.html" %}
 
 {% block title %} Account Info for {{username}} {% endblock %}
+
+{% block navbar_admin %} {% endblock %}
+{% block navbar_logout %} {% endblock %}
 
 {% block body %}
 <a style="text-align: left;" href="/studentHome" class="btn btn-primary" role="button">Go Back</a>
