--- a/templates/studentinfo.html
+++ b/templates/studentinfo.html
@@ -1,4 +1,8 @@
-{% extends "loggedin_base.html" %}
+{% extends "base.html" %}
+
+{% block navbar_admin %} {% endblock %}
+{% block navbar_logout %} {% endblock %}
+{% block navbar_stu %} {% endblock %}
 
 {% block header %}
   <h2>Welcome, {{user}}!</h2>
