--- a/templates/login.html
+++ b/templates/login.html
@@ -2,7 +2,8 @@
 
 {% block title %}Login{% endblock %}
 
-<!-- {% block navbar_logged_in %} {% endblock %} -->
+{% block navbar_admin %} {% endblock %}
+{% block navbar_stu %} {% endblock %}
 
 {% block body %}
 <center>
