--- a/templates/view_op.html
+++ b/templates/view_op.html
@@ -1,5 +1,8 @@
 {% extends "base.html" %}
 
+{% block navbar_logout %}
+{% block navbar_admin %}
+
 {% block header %}
   {% for message in get_flashed_messages() %}
     {{message}}
