Add extra links to navbar

--- a/templates/adminCalendar.html
+++ b/templates/adminCalendar.html
@@ -1,5 +1,7 @@
 {% extends "base.html" %}
 
+{% block navbar_stu %} {% endblock %}
+{% block navbar_logout %} {% endblock %}
 {% block title %} Admin Calendar {% endblock %}
 
 {% block body %}
