--- a/templates/base.html
+++ b/templates/base.html
@@ -70,6 +70,9 @@
           <li class="nav-item">
             <a class="nav-link" href="/studentHome"> Home </a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/myOps"> View Your Opportunities </a>
+          </li>
         </div>
         <a class="nav-link btn btn-outline-dark" href="/logout">Logout</a>
       </nav>
