Hopefully javscript works

--- a/templates/allOps.html
+++ b/templates/allOps.html
@@ -5,6 +5,17 @@
     {{message}}
   {% endfor %}
 
+<script>
+ var showOpps = function(e) {
+     var desc = document.getElementById("descriptions");
+     desc.innerHTML = document.getElementByClass("table").rows[e].cells[3];
+ }
+
+ for(var i = 0; i < document.getElementByClass("table").rows.length; i++) {
+     document.getElemementByTag("th").addEventListener("onmouseover", showOpps(i));
+ }
+</script>
+
 {% endblock %}
 
 {% block body %}
@@ -14,6 +25,7 @@
 <div align="center">
 <br>
   <h1> Opportunities </h1>
+  <span id="descriptions"></span>
   <table class="table">
     <thead>
       <tr>
