--- a/templates/myOps.html
+++ b/templates/myOps.html
@@ -6,6 +6,7 @@
   {% endfor %}
 {% endblock %}
 
+{% block navbar_logout %} {% endblock %}
 
 {% block body %}
 <a href="/allOps" class="btn btn-primary" role="button">View All Opportunities</a>
