--- a/templates/myOps.html
+++ b/templates/myOps.html
@@ -7,6 +7,7 @@
 {% endblock %}
 
 {% block navbar_logout %} {% endblock %}
+{% block navbar_admin %} {% endblock %}
 
 {% block body %}
 <a href="/allOps" class="btn btn-primary" role="button">View All Opportunities</a>
