--- a/templates/adm_home.html
+++ b/templates/adm_home.html
@@ -1,5 +1,8 @@
 {% extends "loggedin_base.html" %}
 
+{% block navbar_logout %} {% endblock %}
+{% block navbar_stu %} {% endblock %}
+
 {% block title %} Home {% endblock %}
 {% block header %}
   {% for message in get_flashed_messages() %}
