--- a/templates/base.html
+++ b/templates/base.html
@@ -67,12 +67,14 @@
           Student Opportunities Bulletin
         </a>
         <div class="navbar-collapse collapse">
-          <li class="nav-item">
-            <a class="nav-link" href="/studentHome"> Home </a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/myOps"> View Your Opportunities </a>
-          </li>
+          <ul class="navbar-nav flex-row bd-navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="/studentHome"> Home </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/myOps"> View Your Opportunities </a>
+            </li>
+          </ul>
         </div>
         <a class="nav-link btn btn-outline-dark" href="/logout">Logout</a>
       </nav>
