--- a/templates/stu_home.html
+++ b/templates/stu_home.html
@@ -8,6 +8,7 @@
 
 
 {% block body %}
+	<h1> Student Opportunity Board </h1>
 	<br>
   <form style = "margin-bottom: 10px;" action = "/myOps">
     <input type = "submit" value = "View My Opportunities">
