--- a/templates/myOps.html
+++ b/templates/myOps.html
@@ -17,7 +17,7 @@
   <input type="submit">
 </form>
 <br>
-  <h1> Opportunities </h1>
+  <h1> Your Saved Opportunities </h1>
   <table class="table">
     <thead>
       <tr>
@@ -25,12 +25,22 @@
         <th scope="col">Grades</th>
         <th scope="col">Tags / Interests</th>
         <th scope="col">Description</th>
+        <th scope="col">Program Dates</th>
+        <th scope="col">Due Date</th>
+        <th scope="col">Date Posted</th>
+        <th scope="col">Remove Opportunity</th>
       </tr>
     </thead>
-    {% for item in op_list %}
+    {% for item in my_ops %}
     <tbody>
       <tr>
-        <th scope="row" href = "{{ url_for('view_op', opid=item[0]) }}">{{item[1]}} </th>
+        <th scope="row"><a href = "/view/{{item[0]}}">{{item[1]}}</a></th>
+        <td>
+          {% if item[15] %}<span class="badge badge-primary">9</span>{% endif %}
+          {% if item[16] %}<span class="badge badge-primary">10</span>{% endif %}
+          {% if item[17] %}<span class="badge badge-primary">11</span>{% endif %}
+          {% if item[18] %}<span class="badge badge-primary">12</span>{% endif %}
+        </td>
         <td>
           {% if item[2] %}<span class="badge badge-primary">events</span>{% endif %}
           {% if item[3] %}<span class="badge badge-primary">academic</span>{% endif %}
@@ -44,6 +54,58 @@
           {% if item[11] %}<span class="badge badge-primary">scholarship</span>{% endif %}
         </td>
         <td><div style="overflow-y: scrollable;">{{item[12]}}</div></td>
+        <td><span class="badge badge-pill badge-success">{{item[22]}}</span> -
+            <span class="badge badge-pill badge-danger">{{item[23]}}</span>
+        </td>
+        <td><span class="badge badge-pill badge-info">{{item[20]}}</span></td>
+        <td><span class="badge badge-pill badge-info">{{item[21]}}</span></td>
+        <td><a href="/unsaveOpp/{{item[0]}}" class="btn btn-success" role="button">Save</a></td>
+      {% endfor %}
+    </tbody>
+  </table>
+  <h1> Opportunities Based on Your Interests </h1>
+  <table class="table">
+    <thead>
+      <tr>
+        <th scope="col">Opportunity Name</th>
+        <th scope="col">Grades</th>
+        <th scope="col">Tags / Interests</th>
+        <th scope="col">Description</th>
+        <th scope="col">Program Dates</th>
+        <th scope="col">Due Date</th>
+        <th scope="col">Date Posted</th>
+        <th scope="col">Save Opportunity</th>
+      </tr>
+    </thead>
+    {% for item in op_list %}
+    <tbody>
+      <tr>
+        <th scope="row"><a href = "/{{item[0]}}">{{item[1]}}</a></th>
+        <td>
+          {% if item[15] %}<span class="badge badge-primary">9</span>{% endif %}
+          {% if item[16] %}<span class="badge badge-primary">10</span>{% endif %}
+          {% if item[17] %}<span class="badge badge-primary">11</span>{% endif %}
+          {% if item[18] %}<span class="badge badge-primary">12</span>{% endif %}
+        </td>
+        <td>
+          {% if item[2] %}<span class="badge badge-primary">events</span>{% endif %}
+          {% if item[3] %}<span class="badge badge-primary">academic</span>{% endif %}
+          {% if item[4] %}<span class="badge badge-primary">business</span>{% endif %}
+          {% if item[5] %}<span class="badge badge-primary">community service</span>{% endif %}
+          {% if item[6] %}<span class="badge badge-primary">leadership</span>{% endif %}
+          {% if item[7] %}<span class="badge badge-primary">museums</span>{% endif %}
+          {% if item[8] %}<span class="badge badge-primary">nature</span>{% endif %}
+          {% if item[9] %}<span class="badge badge-primary">STEM</span>{% endif %}
+          {% if item[10] %}<span class="badge badge-primary">humanities</span>{% endif %}
+          {% if item[11] %}<span class="badge badge-primary">scholarship</span>{% endif %}
+        </td>
+        <td><div style="overflow-y: scrollable;">{{item[12]}}</div></td>
+        <td><span class="badge badge-pill badge-success">{{item[22]}}</span> -
+            <span class="badge badge-pill badge-danger">{{item[23]}}</span>
+        </td>
+        <td><span class="badge badge-pill badge-info">{{item[20]}}</span></td>
+        <td><span class="badge badge-pill badge-info">{{item[21]}}</span></td>
+        <td><a href="/saveOpp/{{item[0]}}" class="btn btn-success" role="button">Save</a></td>
       {% endfor %}
     </tbody>
   </table>
