Fix navbars, in hindsight, don't implement them the way I did

--- a/templates/add_op.html
+++ b/templates/add_op.html
@@ -2,6 +2,9 @@
 
 {% block title %} Home {% endblock %}
 
+{% block navbar_stu %} {% endblock %}
+{% block navbar_logout %} {% endblock %}
+
 {% block body %}
 <table>
   <!-- this should show the student opportunity bulletin -->
