--- a/templates/addEvent.html
+++ b/templates/addEvent.html
@@ -1,5 +1,8 @@
 {% extends "base.html" %}
 
+{% block navbar_stu %} {% endblock %}
+{% block navbar_logout %} {% endblock %}
+
 {% block title %} Add Event {% endblock %}
 
 {% block body %}
