Fix something that looked bad

--- a/templates/stu_info.html
+++ b/templates/stu_info.html
@@ -6,8 +6,9 @@
 {% block navbar_logout %} {% endblock %}
 
 {% block body %}
-<a style="text-align: left;" href="/studentHome" class="btn btn-primary" role="button">Go Back</a>
+<!-- <a style="text-align: left;" href="/studentHome" class="btn btn-primary" role="button">Go Back</a>
 <br><br>
+-->
 <div class="container">
   <div class="row">
     <div class="col-sm-2"></div>
