Get rid of home button, and some other changes

--- a/templates/base.html
+++ b/templates/base.html
@@ -24,7 +24,7 @@
             <a class="nav-link" href="/studentAccount">Register as Student</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="/adminAccount">Register as Admin</a>
+j           <a class="nav-link" href="/adminAccount">Register as Admin</a>
           </li>
         </ul>
         <a class="btn btn-outline-dark" href="/login">Login</a>
@@ -42,9 +42,9 @@
         </a>
         <div class="navbar-collapse collapse">
           <ul class="navbar-nav flex-row bd-navbar-nav">
-            <li class="nav-item">
+            <!-- <li class="nav-item">
               <a class="nav-link" href="/admHome"> Home </a>
-            </li>
+            </li> -->
             <li class="nav-item">
               <a class="nav-link" href="/addOp"> Add New Opportunity </a>
             </li>
@@ -68,11 +68,14 @@
         </a>
         <div class="navbar-collapse collapse">
           <ul class="navbar-nav flex-row bd-navbar-nav">
-            <li class="nav-item">
+            <!-- <li class="nav-item">
               <a class="nav-link" href="/studentHome"> Home </a>
-            </li>
+            </li> -->
             <li class="nav-item">
               <a class="nav-link" href="/myOps"> View Your Opportunities </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/allOps"> View All Opportunities </a>
             </li>
           </ul>
         </div>
