Calendar Auto Update

--- a/templates/add_op.html
+++ b/templates/add_op.html
@@ -40,7 +40,7 @@
   <label for="cost"><strong>Cost</strong></label>
   <input type="number" name="cost" placeholder="$">
   <br>
-  <label for="grades"><strong>Grades Eligible (Ctrl+Enter to select multiple)</strong><span style="color:red"> *Required</span></label>
+  <label for="grades"><strong>Grades Eligible (Ctrl+Click to select multiple)</strong><span style="color:red"> *Required</span></label>
   <br>
   <select name="grades" multiple required>Grades Eligible
     <option value="9">9</option>
